--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 
 script:
   - docker run -e CI=true djcesar1/docker-react npm run test
-#      - docker run -e CI=true USERNAME/docker-react npm run test
+#      - docker run -e CI=true USERNAME/docker-react npm run test hello
 
 deploy:
   provider: elasticbeanstalk
